--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -8,5 +8,9 @@
 Hello!
 
 <a href="/first/goodbye">Say goodbye</a> or <a href="/second/exit">Exit</a>
+or <a href="/first/hello?name=Elon&surname=Mask">Request with parameters</a>
+
+<p th:text="${message}"></p>
+
 </body>
 </html>
